# Multi-agent-framework-researcher

./: LICENSE  README.md
maf_comparator/: .gitignore  README.md  comparison_report.docx  pyproject.toml
maf_comparator/src/maf_comparator/: crew.py  main.py
maf_comparator/src/maf_comparator/config/: agents.yaml  tasks.yaml
maf_comparator/src/maf_comparator/tools/: custom_tool.py
